--- a/manifest.json
+++ b/manifest.json
@@ -20,12 +20,12 @@
       "sizes": "96x96"
     },
     {
-      "src": "./images/android-icon-72x72.png",
+      "src": "./img/android-icon-72x72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "./images/android-icon-48x48.png",
+      "src": "./img/android-icon-48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
